<resources>
    <string name="app_name">SensorExample</string>

    <string name="sensor_proximity">Proximity</string>
    <string name="sensor_light">Light</string>
    <string name="sensor_accelerometer">Accelerometer</string>
    <string name="sensor_compass">Compass</string>
    <string name="sensor_gyroscope">Gyroscope</string>
    <string name="sensor_barometer">Barometer</string>
</resources>
